# ros_opencl_tests

./: CMakeLists.txt  package.xml  results.txt
config/: cpu.yaml  gpu.yaml  gpu_without_ros_opencl.yaml  message_counter.yaml
kernels/: kernel.cl
launch/: message_counter.launch  ros_opencl_tests_cpu.launch  ros_opencl_tests_gpu.launch  ros_opencl_tests_gpu_without_ros_opencl.launch
src/: cpu.cpp  gpu.cpp  gpu_without_ros_opencl.cpp  message_counter.py
